2010-11-14  Andreas Kling  <kling@webkit.org>

        Reviewed by Antonio Gomes.

        http/tests/plugins tests print "Unhandled variable" to stderr under Qt
        https://bugs.webkit.org/show_bug.cgi?id=33438

        Stifle "Unhandled variable" warning to match what the other
        TestNetscapePlugin does (NPP_GetValue in TestNetscapePlugIn/main.cpp
        simply returns NPERR_GENERIC_ERROR for unhandled variables.)

        * DumpRenderTree/unix/TestNetscapePlugin/TestNetscapePlugin.cpp:
        (webkit_test_plugin_get_value):

2010-11-13  David Levin  <levin@chromium.org>

        Reviewed by Eric Seidel.

        check-webkit-style function detection crashes on functions in templates.
        https://bugs.webkit.org/show_bug.cgi?id=49504

        For example "template <bool shouldClose(const Element*)>".

        * Scripts/webkitpy/style/checkers/cpp.py: If not function is detected, bail out.
        * Scripts/webkitpy/style/checkers/cpp_unittest.py: Modified the complex
          function detection test to expose this issue.

2010-11-12  David Levin  <levin@chromium.org>

        Reviewed by Shinichiro Hamaji.

        check-webkit-style function detection doesn't detect indented functions declaractions.
        https://bugs.webkit.org/show_bug.cgi?id=49446

        Indented function declarations occur inside class definitions, so
        they are a pretty common (and worth detecting).

        * Scripts/webkitpy/style/checkers/cpp.py:
          Changed regex to allow indentation.
          Changed the function start detection to only happen when not in a
          function.
          Changed function end detection to work based on matching braces
          instead of finding a close brace at the beginning of the line.
          Fixed close_expression to do what it says when it doesn't find
          the close.
        * Scripts/webkitpy/style/checkers/cpp_unittest.py: Indented function test.

2010-11-12  Daniel Bates  <dbates@rim.com>
